# hello-world-efi

./: .cz.json  .cz.toml  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  .yarnrc.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  main.c  package.json  pyproject.toml  test.c  vcpkg.json
.claude/agents/: regen.md  release.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: clang-format.yml  close-inactive.yml  cmake.yml  codeql.yml  qa.yml  tests.yml
