[tool.poetry]
name = "hello-world-efi"
version = "0.0.1"
description = "Only for dependencies that need Python."
authors = ["Andrew Udvare <audvare@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
cmake-format = "^0.6.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
tag_format = "v$version"
version_files = ["CMakeLists.txt", "README.md", "package.json"]
version_provider = "npm"
version_scheme = "semver"
